--- a/index.html
+++ b/index.html
@@ -190,23 +190,28 @@
             </div>
             <div class="right-column">
                 <aside>
-                    <h4>Recent Posts</h4>
-                    <ul>
-                        <li>
-                            <a href="#">The Blockchain Technology and Use Cases</a>
-                        </li>
-                        <li><a href="#">Two Pizzas for $10,000 BTC</a></li>
-                        <li>
-                            <a href="#">The Oil Money, How to get Started</a>
-                        </li>
-                    </ul>
-                    <h4>Categories</h4>
-                    <ul>
-                        <li><a href="#">Technology News</a></li>
-                        <li><a href="#">Artificial Intelligence</a></li>
-                        <li><a href="#">Celebrity Gist</a></li>
-                    </ul>
-
+                    <div class="aside-post">
+                        <h4>Recent Posts</h4>
+                        <ul>
+                            <li>
+                                <a href="#"
+                                    >The Blockchain Technology and Use Cases</a
+                                >
+                            </li>
+                            <li><a href="#">Two Pizzas for $10,000 BTC</a></li>
+                            <li>
+                                <a href="#"
+                                    >The Oil Money, How to get Started</a
+                                >
+                            </li>
+                        </ul>
+                        <h4>Categories</h4>
+                        <ul>
+                            <li><a href="#">Technology News</a></li>
+                            <li><a href="#">Artificial Intelligence</a></li>
+                            <li><a href="#">Celebrity Gist</a></li>
+                        </ul>
+                    </div>
                     <div class="subscribe">
                         <h5>Stay updated on our blog!</h5>
                         <p>
